working on html and css

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -19,7 +21,16 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/jest-image-snapshot": "^6.1.0",
+    "@vitejs/plugin-react": "^4.0.1",
+    "happy-dom": "^9.20.3",
+    "jest-image-snapshot": "^6.1.0",
+    "vitest": "^0.32.2"
   }
 }
