--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -17,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
