--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.5"
