--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.5"
+    "typescript": "5.1.5",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
