--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "eslint-config-prettier": "^8.8.0",
     "happy-dom": "^9.20.3",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.16.2",
     "vitest": "^0.32.2"
   }
