--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,7 +43,6 @@
     "@vitejs/plugin-react": "^4.0.1",
     "eslint-config-prettier": "^8.8.0",
     "happy-dom": "^9.20.3",
-    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.16.2",
     "vitest": "^0.32.2"
   }
