--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "create": "ts-node ./prisma/seed.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.1",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
@@ -21,25 +22,31 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "swr": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.5",
+    "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest-image-snapshot": "^6.1.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint-config-prettier": "^8.8.0",
     "happy-dom": "^9.20.3",
