--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
     "create": "ts-node ./prisma/seed.js"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.1",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^4.16.2",
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "argon2": "^0.30.3",
     "autoprefixer": "10.4.14",
-    "bcryptjs": "^2.4.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.7",
-    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -43,10 +42,6 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jest-image-snapshot": "^6.1.0",
-    "@types/jsonwebtoken": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint-config-prettier": "^8.8.0",
     "happy-dom": "^9.20.3",
