--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "argon2": "^0.30.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -42,10 +41,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.1",
     "eslint-config-prettier": "^8.8.0",
-    "happy-dom": "^9.20.3",
-    "prisma": "^4.16.2",
-    "vitest": "^0.32.2"
+    "prisma": "^4.16.2"
   }
 }
