--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "rastioe.js"
-, "prisma/seed.js"  ],
+, "prisma/seed.js", "app/api/auth/login"  ],
   "exclude": [
     "node_modules"
   ]
