--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "create": "ts-node ./prisma/seed.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.4",
@@ -27,7 +25,6 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
@@ -39,7 +36,6 @@
     "swr": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
-    "ts-node": "^10.9.1",
     "typescript": "5.1.5",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
