--- a/package.json
+++ b/package.json
@@ -2,46 +2,50 @@
   "name": "kbdfans-clone",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.1.4",
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@prisma/client": "^4.16.2",
-    "@supabase/auth-helpers-nextjs": "^0.7.2",
-    "@supabase/supabase-js": "^2.26.0",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.46.1",
     "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.12.17",
-    "next": "13.4.7",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
+    "next": "^15.0.3",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "swr": "^2.2.0",
+    "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.5",
+    "tailwindcss": "3.4.15",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.6.3",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
-    "prisma": "^4.16.2"
+    "prisma": "^5.22.0"
   }
 }
