--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -16,7 +19,6 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.1",
-    "@types/node": "20.3.2",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.14",
@@ -39,13 +41,15 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.4.15",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.6.3",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
