--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
+    "next-themes": "^0.4.3",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "^18.3.1",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "sonner": "^1.7.0",
     "swr": "^2.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
