--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
     "next-themes": "^0.4.3",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.49",
     "query-string": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
