--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@stripe/stripe-js": "^5.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.1",
     "@types/react": "18.3.12",
@@ -38,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "sonner": "^1.7.0",
+    "stripe": "^17.4.0",
     "swr": "^2.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
