--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "^15.0.3",
+    "next": "^15.2.0-canary.45",
     "next-themes": "^0.4.3",
     "postcss": "^8.4.49",
     "query-string": "^8.1.0",
