--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -24,13 +25,13 @@
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "^15.2.0-canary.45",
+    "next": "^15.1.7",
     "next-themes": "^0.4.3",
     "postcss": "^8.4.49",
     "query-string": "^8.1.0",
@@ -41,7 +42,7 @@
     "sonner": "^1.7.0",
     "stripe": "^17.4.0",
     "swr": "^2.2.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.4.15",
     "tailwindcss-animate": "^1.0.7",
